--- a/css/styles.css
+++ b/css/styles.css
@@ -77,11 +77,9 @@ img {
   margin: 0 auto;
 }
 
-.social-icons-link {
-  fill: var(--cloud);
-  display: flex;
-  justify-content: center;
-  align-items: center;
+textarea {
+  resize: none;
+  width: 100%;
 }
 
 /* header and footer */
@@ -169,7 +167,7 @@ img {
 }
 .footer .container {
   display: flex;
-  align-items: flex-start;
+  align-items: baseline;
 }
 .logo-footer {
   color: var(--cloud);
@@ -195,16 +193,21 @@ img {
   gap: 24px;
 }
 .footer-icons-item {
+  width: 40px;
+  height: 40px;
+}
+.footer-social-icons-link {
+  fill: var(--cloud);
   display: flex;
   justify-content: center;
   align-items: center;
   background-color: var(--iris);
   border-radius: 50%;
-  width: 40px;
-  height: 40px;
+  width: 100%;
+  height: 100%;
 }
-.footer-icons-item:hover,
-.footer-icons-item:focus {
+.footer-social-icons-link:hover,
+.footer-social-icons-link:focus {
   background-color: var(--green);
   transition: var(--trst);
   transition-property: background-color;
@@ -335,16 +338,21 @@ img {
   gap: 24px;
 }
 .person-icons-item {
+  width: 40px;
+  height: 40px;
+}
+.person-social-icons-link {
+  fill: var(--cloud);
   display: flex;
   justify-content: center;
   align-items: center;
   background-color: var(--iris);
   border-radius: 50%;
-  width: 40px;
-  height: 40px;
+  width: 100%;
+  height: 100%;
 }
-.person-icons-item:hover,
-.person-icons-item:focus {
+.person-social-icons-link:hover,
+.person-social-icons-link:focus {
   background-color: var(--ocean);
   transition: var(--trst);
   transition-property: background-color;
@@ -356,13 +364,16 @@ img {
   display: flex;
   gap: 24px;
 }
-.customers-link {
-  display: flex;
-  gap: 24px;
-  justify-content: center;
-  align-items: center;
+.main-customers-items {
   width: 168px;
   height: 88px;
+}
+.customers-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
   border-radius: 4px;
   border: 1px solid var(--light-slate);
   flex-shrink: 0;
@@ -530,14 +541,18 @@ img {
 }
 .text-review {
   display: block;
-  padding: 72px 32px 16px 32px;
+  padding-top: 72px;
+  margin-bottom: 16px;
 }
 .reviews-list {
+  width: 360px;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
   gap: 8px;
+  padding: 0 24px;
+  margin-bottom: 16px;
 }
 /* .btn-review {
 } */
