--- a/css/styles.css
+++ b/css/styles.css
@@ -13,7 +13,7 @@
   --navy-blue-modal: rgba(46, 47, 66, 0.4);
   --dairy: #fcfcfc;
   --green: #31d0aa;
-  --trst: 250ms cubic-bezier(0.4, 0, 0.2, 1) ease;
+  --trst: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 h1,
 h2,
@@ -124,7 +124,7 @@ textarea {
 .header-list-link:hover,
 .header-list-link:focus {
   color: var(--ocean);
-  transition: var(--trst);
+  transition: var(--trst, ease);
   transition-property: color;
 }
 .header-list-link::after {
@@ -159,7 +159,7 @@ textarea {
 .header-address-link:focus {
   color: var(--ocean);
   transition-property: color;
-  transition: var(--trst);
+  transition: var(--trst, ease);
 }
 .footer {
   background-color: var(--navy-blue);
@@ -212,7 +212,7 @@ textarea {
 .footer-social-icons-link:hover,
 .footer-social-icons-link:focus {
   background-color: var(--green);
-  transition: var(--trst);
+  transition: var(--trst, ease);
   transition-property: background-color;
 }
 
@@ -230,8 +230,6 @@ textarea {
 }
 .footer-subscribe-label {
   font-weight: 500;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
   color: var(--white);
   margin-bottom: 16px;
 }
@@ -241,12 +239,12 @@ textarea {
   display: inline-flex;
   padding: 8px 24px;
   border: none;
-  color: #fff;
+  color: var(--white);
   cursor: pointer;
   border-radius: 4px;
   width: 165px;
   height: 40px;
-  background-color: #4d5ae5;
+  background-color: var(--iris);
   fill: currentColor;
   display: flex;
   align-items: center;
@@ -256,7 +254,7 @@ textarea {
 .footer-subscribe-btn:hover,
 .footer-subscribe-btn:focus {
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
-  background: #404bbf;
+  background: var(--ocean);
 }
 
 /* home */
@@ -297,7 +295,7 @@ textarea {
 .main-button-home:hover,
 .main-button-home:focus {
   background-color: var(--ocean);
-  transition: var(--trst);
+  transition: var(--trst, ease);
   transition-property: background-color;
 }
 .main-benefits {
@@ -400,7 +398,7 @@ textarea {
 .person-social-icons-link:hover,
 .person-social-icons-link:focus {
   background-color: var(--ocean);
-  transition: var(--trst);
+  transition: var(--trst, ease);
   transition-property: background-color;
 }
 .main-customers {
@@ -429,7 +427,7 @@ textarea {
 .customers-link:focus {
   color: var(--ocean);
   border-color: var(--ocean);
-  transition: var(--trst);
+  transition: var(--trst, ease);
   transition-property: color, border-color;
 }
 .social-icons-customers {
@@ -465,7 +463,7 @@ textarea {
   border-color: var(--ocean);
   box-shadow: 0px 3px 1px 0px rgba(0, 0, 0, 0.1),
     0px 2px 1px 0px rgba(0, 0, 0, 0.08), 0px 2px 2px 0px rgba(0, 0, 0, 0.12);
-  transition: var(--trst);
+  transition: var(--trst, ease);
   transition-property: color, background-color, border-color, box-shadow;
 }
 .main-list-pic {
@@ -493,7 +491,7 @@ textarea {
   padding-right: 32px;
   padding-top: 40px;
   transform: translateY(420px);
-  transition: var(--trst);
+  transition: var(--trst, ease);
   transition-property: transform;
 }
 .main-list-pic-link:hover .overlay,
@@ -511,7 +509,7 @@ textarea {
   box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
     0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
   background-color: var(--white);
-  transition: var(--trst);
+  transition: var(--trst, ease);
   transition-property: box-shadow;
 }
 .main-list-pic-title {
@@ -530,7 +528,7 @@ textarea {
   position: fixed;
   inset: 0;
   background-color: var(--navy-blue-modal);
-  transition: var(--trst);
+  transition: var(--trst, ease);
   transition-property: opacity, visibility;
   transition-delay: 0ms;
 }
@@ -543,16 +541,16 @@ textarea {
 .modal {
   display: flex;
   align-items: center;
+  justify-content: center;
   flex-direction: column;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translateX(-50%) translateY(-50%) scale(1);
   width: 408px;
-  min-height: 584px;
   background-color: var(--white);
   border-radius: 4px;
-  transition: var(--trst);
+  transition: var(--trst, ease);
   transition-property: transform, opacity;
   transition-delay: 600ms;
   box-shadow: 0 2px 1px 0 rgba(0, 0, 0, 0.2), 0 1px 3px 0 rgba(0, 0, 0, 0.12),
@@ -572,7 +570,6 @@ textarea {
   align-items: center;
   padding: 0;
   background-color: var(--cornflower);
-  padding: 0;
   width: 24px;
   height: 24px;
   flex-shrink: 0;
@@ -586,33 +583,118 @@ textarea {
   border: 1px solid var(--iris);
 }
 .modal-review-block {
-  width: 360px;
-}
-.text-review {
   padding-top: 72px;
+  padding-bottom: 24px;
+}
+.modal-cta {
+  width: 360px;
   margin-bottom: 16px;
   font-weight: 500;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
   text-align: center;
   color: var(--navy-blue);
 }
-.reviews-list {
-  width: 360px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  gap: 8px;
-  padding: 0 24px;
-  margin-bottom: 16px;
+.review-form-wrapper:not(:first-child) {
+  margin-top: 8px;
 }
-.checkbox-agreement {
-  padding-bottom: 24px;
+.review-form-label {
+  font-size: 12px;
+  line-height: 1.17;
+  color: var(--light-slate);
 }
-.checkbox-agreement-text {
-  display: block;
+.review-form-field {
+  position: relative;
+  margin-top: 4px;
+}
+.review-form-input {
+  width: 100%;
+  height: 40px;
+  padding: 11px 4px 11px 38px;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: var(--slate);
+  border-radius: 4px;
+  border: 1px solid var(--navy-blue-modal);
+  outline: transparent;
+}
+.review-form-input:hover,
+.review-form-input:focus {
+  border: 1px solid var(--iris);
+}
+.review-icon {
+  position: absolute;
+  top: 50%;
+  left: 16px;
+  transform: translateY(-50%);
+  fill: var(--navy-blue);
+  pointer-events: none;
+}
+.review-form-input:focus + .review-icon {
+  fill: var(--iris);
+}
+.review-form-message {
+  border-radius: 4px;
+  width: 100%;
+  height: 120px;
+  padding: 8px 16px;
+  margin-top: 4px;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: var(--slate);
+  border: 1px solid var(--navy-blue-modal);
+  outline: transparent;
+}
+.review-form-message:hover,
+.review-form-message:focus {
+  border: 1px solid var(--iris);
+}
+.review-form-message::placeholder {
+  color: var(--navy-blue-modal);
+}
+.review-form-agreement {
+  margin-top: 16px;
   margin-bottom: 24px;
 }
-/* .btn-review {
-} */
+.review-form-agreement-desc {
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: var(--light-slate);
+}
+.review-form-checkbox {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  width: 16px;
+  height: 16px;
+  margin-right: 8px;
+  border-radius: 2px;
+  border: 1px solid var(--navy-blue-modal);
+  cursor: pointer;
+  transition: var(--trns);
+}
+input[type='checkbox']:checked
+  + .review-form-agreement-desc
+  > .review-form-checkbox {
+  fill: var(--cloud);
+  background-color: var(--ocean);
+}
+.review-form-checkbox-icon {
+  transform: scale(0.25);
+  fill: transparent;
+  transition: var(--trst);
+}
+input[type='checkbox']:checked
+  + .review-form-agreement-desc
+  > .review-form-checkbox
+  > .review-form-checkbox-icon {
+  fill: rgb(var(--white-cl));
+  transform: scale(1);
+}
+.review-form-agreement-link {
+  line-height: 1.33;
+  text-decoration: underline;
+  text-decoration-skip-ink: none;
+  color: var(--iris);
+}
